--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.11.19",
     "@types/react": "18.2.56",
     "@types/react-dom": "18.2.19",
+    "@uploadthing/react": "^6.2.4",
     "autoprefixer": "10.4.17",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -29,12 +30,14 @@
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
+    "uploadthing": "^6.4.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
