--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lms",
+  "name": "lms-tutorial",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,38 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.7",
-    "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@clerk/nextjs": "^4.23.5",
+    "@hookform/resolvers": "^3.3.1",
+    "@prisma/client": "^5.3.0",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
-    "@types/node": "20.11.19",
-    "@types/react": "18.2.56",
-    "@types/react-dom": "18.2.19",
-    "@uploadthing/react": "^6.2.4",
-    "autoprefixer": "10.4.17",
-    "axios": "^1.6.7",
+    "@types/node": "20.6.0",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "@uploadthing/react": "^5.5.0",
+    "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "eslint": "8.56.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "eslint": "8.49.0",
     "eslint-config-next": "13.4.12",
-    "lucide-react": "^0.331.0",
+    "lucide-react": "^0.276.0",
     "next": "13.4.12",
-    "postcss": "8.4.35",
+    "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "3.4.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3",
-    "uploadthing": "^6.4.1",
-    "zod": "^3.22.4"
+    "typescript": "5.2.2",
+    "uploadthing": "^5.5.3",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "prisma": "^5.10.2"
+    "prisma": "^5.3.0"
   }
 }
