--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.5",
+    "@hello-pangea/dnd": "^16.5.0",
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.3.0",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -43,6 +44,6 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "prisma": "^5.3.0"
+    "prisma": "^5.10.2"
   }
 }
