--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@clerk/nextjs": "^4.23.5",
     "@hello-pangea/dnd": "^16.5.0",
     "@hookform/resolvers": "^3.3.1",
-    "@mux/mux-node": "^7.3.1",
-    "@mux/mux-player-react": "^1.14.2",
+    "@mux/mux-node": "^8.0.0",
+    "@mux/mux-player-react": "^2.3.3",
     "@prisma/client": "^5.3.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
@@ -47,6 +47,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "encoding": "^0.1.13",
     "prisma": "^5.10.2"
   }
 }
