--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@prisma/client": "^5.3.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.13.2",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -34,11 +36,13 @@
     "lucide-react": "^0.276.0",
     "next": "13.4.12",
     "postcss": "8.4.29",
+    "query-string": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
