--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall":"prisma generate"
+    "postinstall": "prisma generate",
+    "dev:docker": "npm run prisma:docker & next dev",
+    "prisma:docker": "npm run prisma:migrate && npm run prisma:seed &&npm run prisma:studio",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "prisma:seed":"node utils/seed.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.5",
@@ -37,7 +42,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.276.0",
-    "next": "13.4.12",
+    "next": "14.2.0",
     "postcss": "8.4.29",
     "query-string": "^9.0.0",
     "react": "18.2.0",
@@ -50,6 +55,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "typescript": "5.2.2",
     "uploadthing": "^5.5.3",
     "zod": "^3.22.2"
